--- a/_includes/track.html
+++ b/_includes/track.html
@@ -13,8 +13,14 @@
   {%- else -%}
     {%- assign frame_title = "плеер YouTube" -%}
   {%- endif -%}
+
+  {%- if include.song.youtube contains "?" -%}
+    {%- assign delim = "&" -%}
+  {%- else -%}
+    {%- assign delim = "?" -%}
+  {%- endif -%}
   <iframe width="650" height="365" title="{{ frame_title }}"
-          src="https://www.youtube-nocookie.com/embed/{{ include.song.youtube }}?rel=0&modestbranding=1&iv_load_policy=3"
+          src="https://www.youtube-nocookie.com/embed/{{ include.song.youtube }}{{ delim }}rel=0&modestbranding=1&iv_load_policy=3"
           frameborder="0"
           allowfullscreen
   ></iframe>
