--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -111,6 +111,10 @@ body {
     background: rgba(255, 255, 255, 0.125);
     padding: 12px;
 
+    & + p {
+      margin-top: 20px;
+    }
+
     & > iframe {
       display: block;
     }
